# yield-factor-strats

./: .gitignore  README.md  pyproject.toml
configs/: baseline.yaml
results/tables/: equity_curve.csv  factor_method_report.csv  factor_method_report.md  fly_weights.csv  pca_ae_direction_backtest.csv  pca_factors_train.csv  pca_loadings.csv
scripts/: make_sample_data.py  run_backtest.py  run_factor_report.py  run_pca.py  run_pca_ae_direction_backtest.py  run_preprocess.py
src/ycurve/: __init__.py  config.py
src/ycurve/backtest/: __init__.py  metrics.py  pnl.py
src/ycurve/factors/: __init__.py  ae.py  mfa.py  nmf.py  pca.py
src/ycurve/io/: load.py
src/ycurve/portfolio/: pc_neutral.py
src/ycurve/preprocess/: __init__.py  split.py  transforms.py
src/ycurve/signals/: __init__.py  flies.py
src/ycurve/viz/: __init__.py
src/yield_factor_strats/: __init__.py  config.py  data_models.py
src/yield_factor_strats/backtest/: engine.py
src/yield_factor_strats/pipelines/: __init__.py  run_backtest.py
src/yield_factor_strats/strategies/: __init__.py  base.py  carry.py
tests/: conftest.py  test_imports.py  test_ycurve_baseline.py
